--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@types/pg": "^8.15.4",
